[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/game_ui.gd" type="Script" id=1]
[ext_resource path="res://Sprites/BackGround.jpg" type="Texture" id=2]
[ext_resource path="res://Sprites/Backgrounds/BackGround.jpg" type="Texture" id=3]

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackGround" type="Sprite" parent="."]
visible = false
position = Vector2( 512.342, 300.607 )
z_index = -5
texture = ExtResource( 2 )

[node name="Controls" type="Control" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 152.0
margin_right = 512.0
margin_bottom = 185.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Controls"]
anchor_left = 0.505
anchor_right = 1.0
anchor_bottom = 0.1
margin_left = -0.145004
margin_right = -1.0
text = "How to play"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="Controls"]
anchor_left = 0.508
anchor_top = 0.1
anchor_right = 1.0
anchor_bottom = 0.6
margin_left = -0.132004
margin_right = -1.0
margin_bottom = -7.62939e-06
text = "Mouse: Select pipes
R: Rotate pipes"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoomData" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -186.948
margin_top = -152.384
margin_right = 63.0519
margin_bottom = -52.3843
rect_scale = Vector2( 1.5, 1.5 )

[node name="RoomName" type="Label" parent="RoomData"]
anchor_left = 0.194
anchor_top = 0.229
anchor_right = 0.806
anchor_bottom = 0.449
margin_left = 0.0211792
margin_top = -0.0123672
margin_right = 0.0211639
margin_bottom = -0.0123672
text = "Room code: 1"
align = 1
valign = 2

[node name="DisconnectButton" type="Button" parent="RoomData"]
anchor_left = 0.3
anchor_top = 0.536
anchor_right = 0.7
anchor_bottom = 0.886
margin_left = -0.117043
margin_top = -0.0316734
margin_right = -0.11705
margin_bottom = -0.0316772
text = "Disconnect"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="RoomData/DisconnectButton" to="." method="_on_DisconnectButton_pressed"]
